# mongomcp

./: .gitignore  README.md  generate.py  pyproject.toml
examples/: csdb_tools.yaml
tests/: test_generate.py
