[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongo-mcp-gen"
version = "0.1.0"
description = "Generate a FastMCP server from a MongoDB database"
requires-python = ">=3.10"
dependencies = [
    "pymongo>=4.0.0",
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
mongo-mcp-gen = "generate:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
include = ["generate.py"]
